Enhance file upload functionality by supporting various file types including Excel and Office documents. Implement file type detection and conversion to CSV for Excel files. Update UI to reflect changes in file handling and add user hints for file uploads. Modify localization files to include new upload hints in English, Simplified Chinese, and Traditional Chinese.

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -18,6 +18,7 @@
   "input.placeholder": "Paste text, markdown, or provide URLs here...",
   "input.upload": "Upload File",
   "input.expand": "Expand",
+  "input.file_upload_hint": "💡 Tip: Word and PPT files should be converted to PDF format before uploading; Excel files will be automatically converted to CSV format",
   "config.pages": "Number of Pages",
   "config.style": "Presentation Style",
   "config.custom": "Custom Design Requirements (Optional)",
