Enhance SlidePreview component with internationalization support and add page number indicator. Update localization files to include new translations for slide labels and visual generation messages in English, Simplified Chinese, and Traditional Chinese.

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -19,6 +19,15 @@
   "input.upload": "Upload File",
   "input.expand": "Expand",
   "input.file_upload_hint": "💡 Tip: Word and PPT files should be converted to PDF format before uploading; Excel files will be automatically converted to CSV format",
+  "input.uploaded_files": "Uploaded Files ({count})",
+  "input.file_type_image": "Image (will be parsed by AI)",
+  "input.file_type_document": "Document (will be parsed by AI)",
+  "input.file_type_text": "Text file (will be parsed by AI)",
+  "input.file_type_badge_image": "Image",
+  "input.file_type_badge_text": "Text",
+  "input.file_type_badge_document": "Document",
+  "input.file_ai_parse_hint": "All files will be directly parsed by AI",
+  "input.remove_file": "Remove {name}",
   "config.pages": "Number of Pages",
   "config.style": "Presentation Style",
   "config.custom": "Custom Design Requirements (Optional)",
@@ -61,6 +70,12 @@
   "editor.visuals": "Visuals & Prompts",
   "editor.prompt": "Visual Prompt",
   "editor.regen": "Regenerate",
+  "editor.slide_label": "Slide {order}",
+  "editor.no_slide_selected": "No slide selected",
+  "editor.bullet_points_placeholder": "Bullet points...",
+  "editor.veo_video": "Veo Video",
+  "editor.speaker_notes": "Speaker Notes",
+  "editor.no_visual_generated": "No Visual Generated",
   "status.thinking": "Gemini is thinking...",
   "status.generating": "Generating media...",
   "status.no_slides": "No slides loaded",
