--- a/src/i18n/locales/zh-CN.json
+++ b/src/i18n/locales/zh-CN.json
@@ -17,6 +17,12 @@
   "editor.regen": "重新生成",
   "editor.structure": "结构与内容",
   "editor.visuals": "视觉与提示词",
+  "editor.slide_label": "幻灯片 {order}",
+  "editor.no_slide_selected": "没有选中的幻灯片",
+  "editor.bullet_points_placeholder": "要点...",
+  "editor.veo_video": "Veo 视频",
+  "editor.speaker_notes": "演讲者备注",
+  "editor.no_visual_generated": "未生成视觉",
   "export.cancel": "取消",
   "export.export": "导出",
   "export.exporting": "正在导出...",
@@ -48,6 +54,15 @@
   "input.upload": "上传文件",
   "input.expand": "展开",
   "input.file_upload_hint": "💡 提示：Word 和 PPT 文件请先转存为 PDF 格式上传；Excel 文件会自动转换为 CSV 格式",
+  "input.uploaded_files": "已上传文件 ({count})",
+  "input.file_type_image": "图片（将由 AI 解析）",
+  "input.file_type_document": "文档（将由 AI 解析）",
+  "input.file_type_text": "文本文件（将由 AI 解析）",
+  "input.file_type_badge_image": "图片",
+  "input.file_type_badge_text": "文本",
+  "input.file_type_badge_document": "文档",
+  "input.file_ai_parse_hint": "所有文件都将直接由 AI 解析",
+  "input.remove_file": "移除 {name}",
   "nav.new": "新建项目",
   "nav.settings": "设置",
   "settings.apiKey": "Google API Key",
