--- a/src/i18n/locales/zh-TW.json
+++ b/src/i18n/locales/zh-TW.json
@@ -17,6 +17,12 @@
     "editor.regen": "重新生成",
     "editor.structure": "結構與內容",
     "editor.visuals": "視覺與提示字",
+    "editor.slide_label": "投影片 {order}",
+    "editor.no_slide_selected": "沒有選中的投影片",
+    "editor.bullet_points_placeholder": "要點...",
+    "editor.veo_video": "Veo 影片",
+    "editor.speaker_notes": "演講者備註",
+    "editor.no_visual_generated": "未產生視覺",
     "export.cancel": "取消",
     "export.export": "導出",
     "export.exporting": "正在匯出...",
@@ -48,6 +54,15 @@
     "input.upload": "上傳檔案",
     "input.expand": "展開",
     "input.file_upload_hint": "💡 提示：Word 和 PPT 檔案請先轉存為 PDF 格式上傳；Excel 檔案會自動轉換為 CSV 格式",
+    "input.uploaded_files": "已上傳檔案 ({count})",
+    "input.file_type_image": "圖片（將由 AI 解析）",
+    "input.file_type_document": "文檔（將由 AI 解析）",
+    "input.file_type_text": "文本檔案（將由 AI 解析）",
+    "input.file_type_badge_image": "圖片",
+    "input.file_type_badge_text": "文本",
+    "input.file_type_badge_document": "文檔",
+    "input.file_ai_parse_hint": "所有檔案都將直接由 AI 解析",
+    "input.remove_file": "移除 {name}",
     "nav.new": "新建項目",
     "nav.settings": "設定",
     "settings.apiKey": "Google API Key",
