Implement Electron support by adding configuration for building and running the application. Update project structure to include Electron-specific files and enhance README with detailed instructions for development and packaging. Add IP checking functionality in the SettingsModal component and improve localization for new features.

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -9,6 +9,21 @@
   "settings.ollamaModel": "Ollama Model",
   "settings.comfyWorkflow": "ComfyUI Workflow",
   "settings.detect": "Detect",
+  "settings.checkIp": "Check IP Address",
+  "settings.checkingIp": "Checking...",
+  "settings.directIp": "Direct IP:",
+  "settings.apiTest": "API Test:",
+  "settings.apiAccessOk": "✓ API Access OK",
+  "settings.ipCheckFailed": "IP check failed",
+  "settings.providerGoogle": "Google Gemini (Cloud)",
+  "settings.providerLocal": "Local AI (Ollama + ComfyUI)",
+  "settings.ollamaConnectError": "Unable to connect to Ollama service",
+  "settings.comfyConnectError": "Unable to connect to ComfyUI service",
+  "settings.selectWorkflow": "Select Workflow",
+  "settings.comfyWorkflowHint": "Note: ComfyUI workflows need to be fetched via custom API. Please ensure your ComfyUI server supports workflow list API",
+  "settings.apiKeySaved": "✓ API Key securely saved to local database",
+  "settings.apiKeyHint": "Get your key from <a href=\"https://aistudio.google.com/\" target=\"_blank\">Google AI Studio</a>.",
+  "settings.saveClose": "Save & Close",
   "settings.detecting": "Detecting...",
   "settings.noModels": "Please detect models first",
   "settings.noWorkflows": "Please detect workflows first",
@@ -80,6 +95,19 @@
   "status.generating": "Generating media...",
   "status.no_slides": "No slides loaded",
   "status.no_slides_desc": "Please go back to home to start a new project",
+  "status.using_gemini": "Using Gemini 3 Pro (Thinking Mode)",
+  "error.location_not_supported": "Your location is not supported for Gemini API. Please use VPN or switch to local AI services (Ollama + ComfyUI).",
+  "error.location_not_supported_vpn": "Location not supported error (may occur even with VPN):\n\nPossible causes:\n1. API Key registered in unsupported region\n2. VPN not routing all traffic correctly\n3. Browser/app still using local IP\n\nSolutions:\n• Regenerate API Key in supported region (e.g., USA)\n• Ensure VPN routes all traffic (system-level VPN)\n• Switch to local AI services (Ollama + ComfyUI)\n• Check browser console for full error details",
+  "error.invalid_api_key": "API Key is invalid or expired. Please check your API Key in settings.",
+  "error.quota_exceeded": "API quota exceeded. Please try again later or check your API quota.",
+  "error.generation_failed": "Generation failed. Please check the console for details.",
+  "error.api_key_missing": "API Key Missing",
+  "error.api_key_configure": "Please configure API Key in settings first or switch provider.",
+  "error.confirm_error_message": "Click OK to return to home, or Cancel to view console details.",
+  "error.image_generation_failed": "Image generation failed",
+  "error.veo_generation_failed": "Veo generation failed",
+  "error.all_slides_have_images": "All slides already have images",
+  "error.export_failed": "Export failed, please check console",
   "btn.back_home": "Back to Home",
   "veo.title": "Veo Video Generation",
   "veo.desc": "Generate a video for this slide",
