--- a/src/i18n/locales/zh-CN.json
+++ b/src/i18n/locales/zh-CN.json
@@ -75,10 +75,38 @@
   "settings.noWorkflows": "请先检测工作流",
   "settings.ollamaModel": "Ollama 模型",
   "settings.provider": "AI 服务商",
+  "settings.checkIp": "检测 IP 地址",
+  "settings.checkingIp": "检测中...",
+  "settings.directIp": "直接连接 IP:",
+  "settings.apiTest": "API 测试:",
+  "settings.apiAccessOk": "✓ API 访问正常",
+  "settings.ipCheckFailed": "IP 检测失败",
+  "settings.providerGoogle": "Google Gemini (Cloud)",
+  "settings.providerLocal": "Local AI (Ollama + ComfyUI)",
+  "settings.ollamaConnectError": "无法连接到 Ollama 服务",
+  "settings.comfyConnectError": "无法连接到 ComfyUI 服务",
+  "settings.selectWorkflow": "选择工作流",
+  "settings.comfyWorkflowHint": "提示：ComfyUI 工作流需要通过自定义 API 获取，请确保您的 ComfyUI 服务器支持工作流列表 API",
+  "settings.apiKeySaved": "✓ API Key 已安全保存到本地数据库",
+  "settings.apiKeyHint": "从 <a href=\"https://aistudio.google.com/\" target=\"_blank\">Google AI Studio</a> 获取您的 API Key。",
+  "settings.saveClose": "保存并关闭",
   "status.generating": "正在生成媒体...",
   "status.no_slides": "没有载入的幻灯片",
   "status.no_slides_desc": "请返回主界面开始新项目",
   "status.thinking": "Gemini 正在思考...",
+  "status.using_gemini": "使用 Gemini 3 Pro (思考模式)",
+  "error.location_not_supported": "您所在的地区不支持使用 Gemini API。请使用 VPN 或切换到本地 AI 服务（Ollama + ComfyUI）。",
+  "error.location_not_supported_vpn": "地区不支持错误（即使使用 VPN 也可能出现）：\n\n可能原因：\n1. API Key 的注册地区不支持\n2. VPN 未正确路由所有流量\n3. 浏览器/应用仍在使用本地 IP\n\n解决方案：\n• 在支持的地区（如美国）重新生成 API Key\n• 确保 VPN 路由所有流量（系统级 VPN）\n• 切换到本地 AI 服务（Ollama + ComfyUI）\n• 检查浏览器控制台的完整错误信息",
+  "error.invalid_api_key": "API Key 无效或已过期，请检查设置中的 API Key。",
+  "error.quota_exceeded": "API 配额已用完，请稍后再试或检查您的 API 配额。",
+  "error.generation_failed": "生成失败，请检查控制台获取详细信息。",
+  "error.api_key_missing": "API Key 缺失",
+  "error.api_key_configure": "请先在设置中配置 API Key 或切换服务商。",
+  "error.confirm_error_message": "点击「确定」返回首页，或「取消」查看控制台详细信息。",
+  "error.image_generation_failed": "图片生成失败",
+  "error.veo_generation_failed": "Veo 生成失败",
+  "error.all_slides_have_images": "所有幻灯片都已经有图片了",
+  "error.export_failed": "导出失败，请检查控制台",
   "style.concise": "要点凝练型 (演讲辅助)",
   "style.detailed": "详细展示型 (阅读材料)",
   "veo.desc": "为当前页面生成视频",
