--- a/src/i18n/locales/zh-TW.json
+++ b/src/i18n/locales/zh-TW.json
@@ -75,10 +75,38 @@
     "settings.noWorkflows": "請先偵測工作流程",
     "settings.ollamaModel": "Ollama 模型",
     "settings.provider": "AI 服務商",
+    "settings.checkIp": "檢測 IP 地址",
+    "settings.checkingIp": "檢測中...",
+    "settings.directIp": "直接連接 IP:",
+    "settings.apiTest": "API 測試:",
+    "settings.apiAccessOk": "✓ API 訪問正常",
+    "settings.ipCheckFailed": "IP 檢測失敗",
+    "settings.providerGoogle": "Google Gemini (Cloud)",
+    "settings.providerLocal": "Local AI (Ollama + ComfyUI)",
+    "settings.ollamaConnectError": "無法連接到 Ollama 服務",
+    "settings.comfyConnectError": "無法連接到 ComfyUI 服務",
+    "settings.selectWorkflow": "選擇工作流",
+    "settings.comfyWorkflowHint": "提示：ComfyUI 工作流需要通過自定義 API 獲取，請確保您的 ComfyUI 服務器支持工作流列表 API",
+    "settings.apiKeySaved": "✓ API Key 已安全保存到本地數據庫",
+    "settings.apiKeyHint": "從 <a href=\"https://aistudio.google.com/\" target=\"_blank\">Google AI Studio</a> 獲取您的 API Key。",
+    "settings.saveClose": "保存並關閉",
     "status.generating": "正在產生媒體...",
     "status.no_slides": "沒有載入的幻燈片",
     "status.no_slides_desc": "請回到主介面開始新專案",
     "status.thinking": "Gemini 正在思考...",
+    "status.using_gemini": "使用 Gemini 3 Pro (思考模式)",
+    "error.location_not_supported": "您所在的地區不支持使用 Gemini API。請使用 VPN 或切換到本地 AI 服務（Ollama + ComfyUI）。",
+    "error.location_not_supported_vpn": "地區不支持錯誤（即使使用 VPN 也可能出現）：\n\n可能原因：\n1. API Key 的註冊地區不支持\n2. VPN 未正確路由所有流量\n3. 瀏覽器/應用仍在使用本地 IP\n\n解決方案：\n• 在支持的地區（如美國）重新生成 API Key\n• 確保 VPN 路由所有流量（系統級 VPN）\n• 切換到本地 AI 服務（Ollama + ComfyUI）\n• 檢查瀏覽器控制台的完整錯誤信息",
+    "error.invalid_api_key": "API Key 無效或已過期，請檢查設置中的 API Key。",
+    "error.quota_exceeded": "API 配額已用完，請稍後再試或檢查您的 API 配額。",
+    "error.generation_failed": "生成失敗，請檢查控制台獲取詳細信息。",
+    "error.api_key_missing": "API Key 缺失",
+    "error.api_key_configure": "請先在設置中配置 API Key 或切換服務商。",
+    "error.confirm_error_message": "點擊「確定」返回首頁，或「取消」查看控制台詳細信息。",
+    "error.image_generation_failed": "圖片生成失敗",
+    "error.veo_generation_failed": "Veo 生成失敗",
+    "error.all_slides_have_images": "所有幻燈片都已經有圖片了",
+    "error.export_failed": "導出失敗，請檢查控制台",
     "style.concise": "要點凝練型 (演講輔助)",
     "style.detailed": "詳細展示型 (閱讀材料)",
     "veo.desc": "為目前頁面產生影片",
