Enhance application with system tray support and language detection. Add functionality for minimizing to tray, improve theme management with system preferences, and update localization files for new theme options. Update README with instructions for handling port conflicts and build errors.

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -111,5 +111,8 @@
   "btn.back_home": "Back to Home",
   "veo.title": "Veo Video Generation",
   "veo.desc": "Generate a video for this slide",
-  "veo.prompt": "Video Prompt"
+  "veo.prompt": "Video Prompt",
+  "theme.system": "Follow System Theme",
+  "theme.switch_to_light": "Switch to Light Mode",
+  "theme.switch_to_dark": "Switch to Dark Mode"
 }
