--- a/src/i18n/locales/zh-CN.json
+++ b/src/i18n/locales/zh-CN.json
@@ -111,5 +111,8 @@
   "style.detailed": "详细展示型 (阅读材料)",
   "veo.desc": "为当前页面生成视频",
   "veo.prompt": "视频提示词",
-  "veo.title": "Veo 视频生成"
+  "veo.title": "Veo 视频生成",
+  "theme.system": "跟随系统主题",
+  "theme.switch_to_light": "切换到浅色模式",
+  "theme.switch_to_dark": "切换到深色模式"
 }
