Update version to 0.1.4 and enhance API error handling in SettingsModal.vue. Improve localization for API messages in English, Simplified Chinese, and Traditional Chinese, ensuring better user feedback for IP checks and errors.

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -15,6 +15,9 @@
   "settings.apiTest": "API Test:",
   "settings.apiAccessOk": "✓ API Access OK",
   "settings.ipCheckFailed": "IP check failed",
+  "settings.apiIpLabel": "IP:",
+  "settings.locationError": "Location Error: {message}",
+  "settings.apiError": "API Error: {message}",
   "settings.providerGoogle": "Google Gemini (Cloud)",
   "settings.providerLocal": "Local AI (Ollama + ComfyUI)",
   "settings.ollamaConnectError": "Unable to connect to Ollama service",
