--- a/src/i18n/locales/zh-CN.json
+++ b/src/i18n/locales/zh-CN.json
@@ -81,6 +81,9 @@
   "settings.apiTest": "API 测试:",
   "settings.apiAccessOk": "✓ API 访问正常",
   "settings.ipCheckFailed": "IP 检测失败",
+  "settings.apiIpLabel": "IP:",
+  "settings.locationError": "地区限制错误：{message}",
+  "settings.apiError": "API 错误：{message}",
   "settings.providerGoogle": "Google Gemini (Cloud)",
   "settings.providerLocal": "Local AI (Ollama + ComfyUI)",
   "settings.ollamaConnectError": "无法连接到 Ollama 服务",
