--- a/src/i18n/locales/zh-TW.json
+++ b/src/i18n/locales/zh-TW.json
@@ -81,6 +81,9 @@
     "settings.apiTest": "API 測試:",
     "settings.apiAccessOk": "✓ API 訪問正常",
     "settings.ipCheckFailed": "IP 檢測失敗",
+    "settings.apiIpLabel": "IP:",
+    "settings.locationError": "地區限制錯誤：{message}",
+    "settings.apiError": "API 錯誤：{message}",
     "settings.providerGoogle": "Google Gemini (Cloud)",
     "settings.providerLocal": "Local AI (Ollama + ComfyUI)",
     "settings.ollamaConnectError": "無法連接到 Ollama 服務",
